Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4399

Management API breaks diagnostic log rotation

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.1.0
    • Logging, Management API
    • None

    Description

      Start up Traffic Server:

          0 26950     1   0 10:13AM ??         0:00.01 /opt/ats/bin/traffic_cop
         -2 26951 26950   0 10:13AM ??         0:00.02 /opt/ats/bin/traffic_manager --bind_stdout /opt/ats/var/log/trafficserver/traffic.out --bind_stderr /opt/ats/var/log/trafficserver/traffic.out
         -2 26952 26951   0 10:13AM ??         0:00.08 /opt/ats/bin/traffic_server -M --bind_stdout /opt/ats/var/log/trafficserver/traffic.out --bind_stderr /opt/ats/var/log/trafficserver/traffic.out --httpport 8080:fd=12
      

      Now restart it using traffic_line -S followed by traffic_line -U:

          0 26950     1   0 10:13AM ??         0:00.01 /opt/ats/bin/traffic_cop
         -2 26951 26950   0 10:13AM ??         0:00.05 /opt/ats/bin/traffic_manager --bind_stdout /opt/ats/var/log/trafficserver/traffic.out --bind_stderr /opt/ats/var/log/trafficserver/traffic.out
         -2 26967 26951   0 10:13AM ??         0:00.12 /opt/ats/bin/traffic_server -M --httpport 8080:fd=20
      

      Note that we lost the --bind_stdout and --bind_stderr options.

      Attachments

        Issue Links

          Activity

            People

              danobi Daniel Xu
              jamespeach James Peach
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 3h 10m
                  3h 10m